force-app/main/default/objects/Account/fields/Customer_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_1__c</fullName>
    <description>客户组1</description>
    <label>Customer Group 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>100:Home Appliance chain</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>200:Buying Groups</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>300:Supermarket</label>
            </value>
            <value>
                <fullName>400</fullName>
                <label>400:Department Stores</label>
            </value>
            <value>
                <fullName>500</fullName>
                <label>500:Small Dealers</label>
            </value>
            <value>
                <fullName>600</fullName>
                <label>600:Online</label>
            </value>
            <value>
                <fullName>601</fullName>
                <label>601:GralLeyPersonMorales</label>
            </value>
            <value>
                <fullName>603</fullName>
                <label>603:PersMoralFinNoLucrat</label>
            </value>
            <value>
                <fullName>605</fullName>
                <label>605:SueldySalaIngAsimSal</label>
            </value>
            <value>
                <fullName>606</fullName>
                <label>606:Arrendamiento</label>
            </value>
            <value>
                <fullName>607</fullName>
                <label>607:RegEnajenaAdquisBien</label>
            </value>
            <value>
                <fullName>608</fullName>
                <label>608:Demás ingresos</label>
            </value>
            <value>
                <fullName>610</fullName>
                <label>610:ResExtrsinEstPermMex</label>
            </value>
            <value>
                <fullName>611</fullName>
                <label>611:Ingresos por Dividen</label>
            </value>
            <value>
                <fullName>612</fullName>
                <label>612:PersFiscActiEmpyProf</label>
            </value>
            <value>
                <fullName>614</fullName>
                <label>614:Ingresos por interes</label>
            </value>
            <value>
                <fullName>615</fullName>
                <label>615:RegIngresoObtPremios</label>
            </value>
            <value>
                <fullName>616</fullName>
                <label>616:SinObligacioneFiscal</label>
            </value>
            <value>
                <fullName>620</fullName>
                <label>620:SocCorpProdDifIngres</label>
            </value>
            <value>
                <fullName>621</fullName>
                <label>621:Incorporación Fiscal</label>
            </value>
            <value>
                <fullName>622</fullName>
                <label>622:ActiAgriGanaSilvPesq</label>
            </value>
            <value>
                <fullName>623</fullName>
                <label>623:OpcionalGpoSociedade</label>
            </value>
            <value>
                <fullName>624</fullName>
                <label>624:Coordinados</label>
            </value>
            <value>
                <fullName>625</fullName>
                <label>625:RegActEmpIngPlatTecn</label>
            </value>
            <value>
                <fullName>626</fullName>
                <label>626:RegSimplifiConfianza</label>
            </value>
            <value>
                <fullName>700</fullName>
                <label>700:Commercial direct</label>
            </value>
            <value>
                <fullName>800</fullName>
                <label>800:PROFESSIONAL</label>
            </value>
            <value>
                <fullName>900</fullName>
                <label>900:SERVICE</label>
            </value>
            <value>
                <fullName>A00</fullName>
                <label>A00:Fiscal Person</label>
            </value>
            <value>
                <fullName>B00</fullName>
                <label>B00:C&amp;C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>