force-app/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Z006</fullName>
                <default>true</default>
                <label>集团外部客户分销</label>
            </value>
            <value>
                <fullName>C005</fullName>
                <label>其他应收-集团外部往来单位</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>