force-app/main/default/objects/Account/fields/Customer_Management_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Management_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name is used to clarify the affiliation of different customers, so as to conduct a unified analysis of the customer&apos;s business situation.</inlineHelpText>
    <label>Customer Management Name</label>
    <referenceTo>Customer_Management__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>