force-app/main/default/objects/Account/fields/Customer_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_2__c</fullName>
    <label>Customer Name 4</label>
    <length>40</length>
    <type>Text</type>
</CustomField>