force-app/main/default/objects/Account/fields/Customer_Name_Local_Language__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Local_Language__c</fullName>
    <inlineHelpText>Please input customer name by local language.</inlineHelpText>
    <label>Customer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>