force-app/main/default/objects/Account/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <displayFormat>C-{00000}</displayFormat>
    <label>Customer No.</label>
    <type>AutoNumber</type>
</CustomField>