force-app/main/default/objects/Account/fields/Customer_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Type__c</fullName>
    <label>Customer Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>OA</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>