force-app/main/default/objects/Account/fields/Customer_Price_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_Level__c</fullName>
    <label>Customer Price Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>10: Service Provider</label>
            </value>
            <value>
                <fullName>20</fullName>
                <default>true</default>
                <label>20: Dealer</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30: C End User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>