force-app/main/default/objects/Account/fields/Customer_pricing_process__c.field-meta.xml
<CustomField>
    <fullName>Customer_pricing_process__c</fullName>
    <description>MDG主数据：客户定价过程</description>
    <label>Customer pricing process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Incl Sales Tax</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Refund</label>
            </value>
            <value>
                <fullName>X</fullName>
                <default>true</default>
                <label>X_GTM Standard</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>excl Sales Tax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>