force-app/main/default/objects/Account/fields/Customer_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Record_Type_Name__c</fullName>
    <label>Customer Record Type Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>