force-app/main/default/objects/Account/fields/Customer_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Risk_Level__c</fullName>
    <label>Customer Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Blacklisted customers</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Risk customers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>