force-app/main/default/objects/Account/fields/Customer_Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Risk_Type__c</fullName>
    <label>Customer Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Risk_Level__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Bankruptcy</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Debt restructuring</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Sanctions</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Fake</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Selling fake goods</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Violation of the undertaking</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Policy settlement fraud</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>String of goods</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Be indicted</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Non-Hisense arrears</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>It is in arrears with Hisense</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Besieging and channeling</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Sales Product Quality Problem</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Employees set up a company to supply goods</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>