force-app/main/default/objects/Account/fields/Customer_Sales_For_3_Consecutive_Years_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_For_3_Consecutive_Years_2__c</fullName>
    <label>Customer Sales For 3 Consecutive Years 2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>