force-app/main/default/objects/Account/fields/Customer_Sales_Scale__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sales_Scale__c</fullName>
    <label>Customer Sales Scale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>