force-app/main/default/objects/Account/fields/Customer_SF_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_SF_Code__c</fullName>
    <displayFormat>C-{00000}</displayFormat>
    <label>Customer SF Code</label>
    <type>AutoNumber</type>
</CustomField>