force-app/main/default/objects/Account/fields/Customer_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Short_Name__c</fullName>
    <inlineHelpText>Tax Info required</inlineHelpText>
    <label>Search Term1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>