force-app/main/default/objects/Account/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undeveloped</fullName>
                <default>true</default>
                <label>Undeveloped</label>
            </value>
            <value>
                <fullName>Developing</fullName>
            </value>
            <value>
                <fullName>Collaborated</fullName>
            </value>
            <value>
                <fullName>Eliminated</fullName>
            </value>
            <value>
                <fullName>FD32</fullName>
                <label>Credit Block (SAP)</label>
            </value>
            <value>
                <fullName>XD05</fullName>
                <label>Business Block (SAP)</label>
            </value>
            <value>
                <fullName>XD06</fullName>
                <label>Logic Deleted (SAP)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>