force-app/main/default/objects/Account/fields/Customer_Status_MDG__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_MDG__c</fullName>
    <label>Customer Status(MDG)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Not cooperating</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>New customer</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Stable cooperation</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Long-term non-cooperation</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Freeze</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>