force-app/main/default/objects/Account/fields/Customer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_type__c</fullName>
    <label>Customer type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Man Rep</fullName>
            </value>
            <value>
                <fullName>Spec Rep</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>