force-app/main/default/objects/Account/fields/Delete_identification_for_company_region__c.field-meta.xml
<CustomField>
    <fullName>Delete_identification_for_company_region__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete identification for company region</label>
    <type>Checkbox</type>
</CustomField>