force-app/main/default/objects/Account/fields/Delivery_Matters_Needing_Attention__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Matters_Needing_Attention__c</fullName>
    <label>交货时注意事项</label>
    <length>255</length>
    <type>Text</type>
</CustomField>