force-app/main/default/objects/Account/fields/Delivery_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Plant__c</fullName>
    <description>MDG主数据：发货工厂</description>
    <label>Delivery Plant</label>
    <length>30</length>
    <type>Text</type>
</CustomField>