force-app/main/default/objects/Account/fields/Delivery_Priority__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Priority__c</fullName>
    <label>Delivery Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02</fullName>
                <label>02: Normal Priority</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>01:High Priority</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>