force-app/main/default/objects/Account/fields/Delivery_Way__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Way__c</fullName>
    <label>交货方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>伝票書式E</fullName>
            </value>
            <value>
                <fullName>チェーンストア</fullName>
            </value>
            <value>
                <fullName>その他（＋コメント）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>